Sat Nov  3 09:03:34 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_refinement.rb (test_new_method_by_send,
	  test_new_method_by_method_object): add tests for Kernel#send and
	  Kernel#method with refinements.

	* test/ruby/test_refinement.rb (test_symbol_to_proc): add a test
	  calling a proc created by Symbol#to_proc outside the scope where
	  a refinement is closed over.

Sat Nov  3 04:14:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_rewrite_ep_in_errinfo): rewrite all catch points in
	  errinfo, not only the topmost frame.  based on the patch by
	  ktsj (Kazuki Tsujimoto) in [ruby-dev:45656]. [Bug #6460]

Fri Nov  2 20:11:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#timestamp_file): remove @ which looks like
	  configure variables.

	* lib/mkmf.rb (MakeMakefile#timestamp_file): use .-. instead of !, a
	  special character of NMAKE and BSD make.  [Bug #7265]

Fri Nov  2 17:55:39 2012  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_parallel): Delete status line before showing
	  results. Patch by Hiroshi Shirosaki. [Bug #6897] [ruby-core:47250]

	* lib/test/unit.rb (_run_parallel): Fix strange result when disabled retrying.
	  Patch by Hiroshi Shirosaki. [Bug #6897] [ruby-core:47250]

Fri Nov  2 17:52:12 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* object.c (rb_mod_to_s): Module#{to_s,inspect}, when invoked on
	  a refinement, returns a string in the format #<refinement:C@M>,
	  where C is a refined class and M is a module at which the refinemet
	  is defined.

	* eval.c (rb_mod_refine): store information on a refinement for the
	  above change.

	* test/ruby/test_refinement.rb: related test.

Fri Nov  2 16:57:52 2012  Shota Fukumori  <sorah@tubusu.net>

	* vm_dump.c (rb_vm_bugreport): Because of many log directories,
	  making directory lists readable.

Fri Nov  2 16:44:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c (rb_vm_bugreport): add ~/Library/Logs/DiagnosticReports