@@ -489,4 +489,9 @@ class TestMethod < Test::Unit::TestCase
       1000.times {p = Bug6171.new('test'); 10000.times {p.reverse}}
       EOC
   end
+
+  def test___dir__
+    assert_instance_of String, __dir__
+    assert_equal(File.dirname(__FILE__), __dir__)
+  end
 end
